--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,97 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  height: 100%;
+  width: 100%;
+  max-height: 1444px;
+  max-width: 1444px;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: #F5F5F5;
+  height: 100%;
+  width: 100%;
+  border-radius: 10px;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: none;
+}
+
+.counter {
+  width: 100%;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  padding-right: 40px;
+  font-size: 1.3rem;
+  color: #4A4E74;
+}
+
+.counter > span {
+  margin-left: 8px;
+  font-weight: 700;
+}
+
+.game-desc {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.game-desc > h1 {
+  color: #2B283A;
+  margin-bottom: 7px;
+}
+
+.game-desc > p {
+  font-size: 1rem;
+  font-weight: 400;
+  color: #4A4E74;
+  max-width: 480px;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.dice-container {
+  display: grid;
+  grid-template: auto auto / repeat(5, 1fr);
+  gap: 40px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.dice-container > button {
+  border: none;
+  width: 80px;
+  height: 80px;
+  border-radius: 8px;
+  background-color: white;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, .15);
+  font-family: Karla, sans-serif;
+  font-size: 1.33rem;
+  font-weight: 700;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.roll-dice-btn {
+  background-color: #5035FF;
+  color: white;
+  height: 40px;
+  padding: 6px 20px;
+  width: auto;
+  border: none;
+  border-radius: 6px;
+  font-family: Karla, sans-serif;
+  font-size: 1.1rem;
+  font-weight: 700;
+  box-shadow: 0 3px 8px rgba(0, 0, 0, .18);
+  white-space: nowrap;
 }
